kubernetes/broker-service.yaml
apiVersion : v1
kind: Service

metadata:
  name: broker
  labels:
    app: broker
  namespace: bootcamp

spec:
  ports:
  - name : broker
    port: 8080
    targetPort: 8080
    protocol: TCP
  - name : metrics
    port: 9091
    targetPort: 9091
    protocol: TCP
  selector:
    app: broker
  type: NodePort
