kubernetes/cassandra-deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: cassandra
  labels:
    app: cassandra
  namespace: bootcamp

spec:
  selector:
    matchLabels:
      app: cassandra
  template:
    metadata:
      labels:
        app: cassandra
    spec:
      containers:
      - name: cassandra
        image: cassandra:latest
        ports:
        - containerPort: 9042
  replicas: 1
