kubernetes/cassandra-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cassandra
  labels:
    app: cassandra
  namespace: bootcamp
spec:
  ports:
  - name : cassandra
    port: 9042
    targetPort: 9042
    protocol: TCP
  selector:
    app: cassandra
  type: NodePort
