kubernetes/envoy-service.yaml
apiVersion : v1
kind: Service

metadata:
  name: envoy
  labels:
    app: envoy
  namespace: bootcamp

spec:
  ports:
  - name : envoy
    port: 10000
    targetPort: 10000
    protocol: TCP 
  selector:
    app: envoy
  type: NodePort
