kubernetes/jaeger-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jaeger
  labels:
    app: jaeger
  namespace: bootcamp

spec:
  ports:
  - name : jaeger
    port: 16686
    targetPort: 16686
    nodePort: 30002
    protocol: TCP
  selector:
    app: jaeger
  type: NodePort
