kubernetes/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
  namespace: bootcamp

spec:
  ports:
  - name : postgres
    port: 5432
    targetPort: 5432
    protocol: TCP
  selector:
    app: postgres
  type: NodePort
