kubernetes/prometheus-service.yaml
apiVersion : v1
kind: Service

metadata:
  name: prometheus
  labels:
    app: prometheus
  namespace: bootcamp

spec:
  ports:
  - name : prometheus
    port: 9090
    targetPort: 9090
    nodePort: 30001
    protocol: TCP 
  selector:
    app: prometheus
  type: NodePort
