kubernetes/scylla-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scylla
  labels:
    app: scylla
  namespace: bootcamp
spec:
  ports:
  - name : scylla
    port: 9042
    targetPort: 9042
    protocol: TCP
  selector:
    app: scylla
  type: NodePort
